--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,7 +1,11 @@
-.searchContainer {
-
-}
-
 .customSearch {
     width: 16em;
 }
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2em;
+
+}
+
