--- a/src/components/Main/MainProjectList.module.css
+++ b/src/components/Main/MainProjectList.module.css
@@ -1,4 +1,57 @@
 .projectDisplay {
+    display: block;
     padding: 1em;
-    border-style: solid;
+    width: 90%;
+    margin: 1em 1em 1em 5%;
+    border-style: groove;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0,0,0,.25);
+}
+
+.projectHeader {
+}
+
+.projectClickableHeader {
+    display: flex !important;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.projectImageAndApproved {
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c5/Risengrynsgr%C3%B8t.jpg");
+    background-size: cover;
+}
+
+
+.projectContentContainer {
+    display: flex;
+}
+
+.projectCategoryAndTags {
+    display: flex;
+    width: 80%;
+    margin-top: .5em;
+}
+
+.projectCategoryContainer {
+    width: 20%;
+    padding: .4em;
+}
+
+.projectTagsContainer {
+    padding: 1em;
+    width: 80%;
+}
+
+.projectQualifiedBanner {
+    position: absolute;
+    z-index: 999999;
+}
+
+.projectDescriptionOwner {
+    text-align: left;
+    padding: .4em;
+    margin-right: .5em;
+    margin-top: .5em;
+    width: 20%;
 }
