--- a/src/components/ProjectDetails/ProjectDetailsInfo.module.css
+++ b/src/components/ProjectDetails/ProjectDetailsInfo.module.css
@@ -1,5 +1,5 @@
 .banner {
-    width: 40em;
+    text-align: left;
 }
 
 .tagsWrapper {
@@ -23,4 +23,18 @@
 .image {
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c5/Risengrynsgr%C3%B8t.jpg");
     background-size: cover;
+}
+
+.picture{
+    height: 8em;
+}
+
+.headerInfo{
+    margin-left: 12em;
+    margin-top: -7em;
+    margin-bottom: 2em;
+}
+
+.details{
+    text-align: left;
 }
