--- a/src/components/ProjectDetails/Chat.css
+++ b/src/components/ProjectDetails/Chat.css
@@ -1,9 +1,15 @@
 .chatContainer{
-    width: 30em;
-    height: 25.6em;
+    min-width: 30em;
+    height: 30em;
     padding: 2em;
     margin: 3em;
     box-shadow: lightgrey 0.5em 0.5em 0.5em 0.5em;
+}
+.message-boardContainer{
+    display: inline-block;
+    min-width: 20em;
+    width: 100%;
+    height: 35em;
 }
 .wrapper-chat{
     overflow-y: auto;
